--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "directories": {
     "test": "test"
   },
-  "repository": "https://github.com/techbubble/flightsurety",
   "license": "MIT",
   "scripts": {
     "test": "truffle test ./test/flightSurety.js && truffle test ./test/oracles.js",
@@ -13,7 +12,7 @@
     "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
     "server": "rm -rf ./build/server && webpack --config webpack.config.server.js"
   },
-  "author": "Nik Kalyani <nik@kalyani.com> https://www.kalyani.com",
+  "author": "Huynh Nhut NGUYEN <nhuttommy@gmail.com>",
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.46",
     "@babel/core": "^7.0.0-beta.46",
